--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
 
-h1 {margin-bottom: 30px;}
+h2 {margin-bottom: 30px;}
 label {font-weight: bold;}
 input, select {margin-bottom: 10px;}
 form {width: 100%; background: #cfcccc; padding: 20px; border: 3px solid rgb(238, 198, 105)}
+
+#buildpizza {margin-bottom: 30px; margin-bottom: 10px; background: #cfcccc; 
+    padding: 20px; border: 3px solid rgb(238, 198, 105);
+   
+
+
+}
+
