--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@ form {width: 100%; background: #cfcccc; padding: 20px; border: 3px solid rgb(238
 
 #buildpizza {margin-bottom: 30px; margin-bottom: 10px; background: #cfcccc; 
     padding: 20px; border: 3px solid rgb(238, 198, 105);
-   
-
 
 }
+p {margin-bottom: 30px; margin-bottom: 10px; background: #cfcccc; 
+    padding: 20px; border: 3px solid rgb(238, 198, 105); font-size: 19px}
 
