--- a/css/styles.css
+++ b/css/styles.css
@@ -9,5 +9,8 @@ form {width: 100%; background: #cfcccc; padding: 20px; border: 3px solid rgb(238
 
 }
 #runningtotal p {margin-bottom: 30px; margin-bottom: 10px; background: #cfcccc; 
-    padding: 20px; border: 3px solid rgb(238, 198, 105); font-size: 19px; visibility: hidden;}
+    padding: 20px; border: 3px solid rgb(238, 198, 105); font-size: 19px}
+
+#selectcheese {visibility: hidden;}
+#selectsauce, #selecttoppings, #buttons {visibility: hidden;}
 
